--- a/treestyletab/custom-hover.css
+++ b/treestyletab/custom-hover.css
@@ -1,22 +1,22 @@
 
 :root{ 
-  --dark-0: #151D28;
-  --dark-base: #192330;
-  --dark-1: #233143;
-  --dark-2: #2A3B51;
-  --dark-3: #374E6C;
-  --dark-4: #3E5879;
-  --light-0: #D7DFEA;
-  --light-base: #afc0d5;
-  --light-1: #A1B5CE;
-  --light-2: #94ABC7;
-  --light-3: #87A0C0;
-  --light-4: #7996B9;
-  --accent: #63cdcf;
-  --yellow: #dbc074;
-  --green: #5cb8a7;
-  --red: #c94f6d;
-  --extension-icon-mask: grayscale(85%) invert(75%) sepia(8%) saturate(862%) hue-rotate(173deg) brightness(88%);
+    --dark-0: #100e23;
+    --dark-base: #1e1c31;
+    --dark-1: #2d2b40;
+    --dark-2: #3E3859;
+    --dark-3: #585273;
+    --dark-4: #585273;
+    --light-0: #8a889d;
+    --light-base: #cbe3e7;
+    --light-1: #a1b5ce;
+    --light-2: #94abc7;
+    --light-3: #87a0c0;
+    --light-4: #7996b9;
+    --accent: #a1efd3;
+    --yellow: #ffe6b3;
+    --green: #63f2f1;
+    --red: #f48FB1;
+    --extension-icon-mask: grayscale(85%) invert(75%) sepia(8%) saturate(862%) hue-rotate(173deg) brightness(88%);
 }
 
 :root.incognito{ 
